--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@
 		<!-- ... -->
 		<section class="container">
 			<h2 id="titulo-form">Adicionar novo paciente</h2>
+			<ul id="mensagem-erro">
+
+			</ul>
 			<form id="form-adiciona">
-				<div>
+				<div class="">
 					<label for="nome">Nome:</label>
 					<input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
 				</div>
