remoção, delegação e animação

--- a/index.html
+++ b/index.html
@@ -102,5 +102,6 @@
 
 		<script src="./js/principal.js"></script>
 		<script src="./js/form.js"></script>
+		<script src="./js/remover-paciente.js"></script>
 	</body>
 </html>
