--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
+				<label for="filtar-tabela">Filtre:</label>
+				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente.">
 				<table>
 					<thead>
 						<tr>
@@ -103,5 +105,6 @@
 		<script src="./js/principal.js"></script>
 		<script src="./js/form.js"></script>
 		<script src="./js/remover-paciente.js"></script>
+		<script src="./js/filtra.js"></script>
 	</body>
 </html>
